Freedom7 - publish brick with lib
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@2108 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4